--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
+    "dot-env": "^0.0.1",
+    "dotenv": "^16.0.2",
     "ejs": "^3.1.5",
     "express": "^4.18.1",
+    "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
+    "nodemon": "^2.0.20",
+    "uuid": "^9.0.0",
+    "vcards-js": "^2.10.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
