--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+PORT = 5000
 UPLOADCARE_PUB_KEY = 'cc2fed9d9bf34ec55dfc'
 UPLOADCARE_URL = 'https://upload.uploadcare.com/base/'
 UPLOADCARE_PATH = 'https://ucarecdn.com/'
