--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "dot-env": "^0.0.1",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.5",
