--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT = 5000
 UPLOADCARE_PUB_KEY = 'cc2fed9d9bf34ec55dfc'
 UPLOADCARE_URL = 'https://upload.uploadcare.com/base/'
 UPLOADCARE_PATH = 'https://ucarecdn.com/'
+CASPIO_MBIZCARD_TABLE_PATH = 'https://c7esh782.caspio.com/rest/v2/tables/MBizCard_Users/records'
+CASPIO_AUTHTOKEN_PATH = 'https://c7esh782.caspio.com/oauth/token'
