generate qr code and save image to db

--- a/.env
+++ b/.env
@@ -4,3 +4,12 @@ UPLOADCARE_URL = 'https://upload.uploadcare.com/base/'
 UPLOADCARE_PATH = 'https://ucarecdn.com/'
 CASPIO_MBIZCARD_TABLE_PATH = 'https://c7esh782.caspio.com/rest/v2/tables/MBizCard_Users/records'
 CASPIO_AUTHTOKEN_PATH = 'https://c7esh782.caspio.com/oauth/token'
+CASPIO_QR_GENERATOR_TABLE_PATH = 'https://c0dcs193.caspio.com/rest/v2/tables/QR_Generator_Active_1/records'
+CASPIO_QR_GENERATOR_AUTHTOKEN_PATH = 'https://c0dcs193.caspio.com/oauth/token'
+CASPIO_CLIENTID= 327493aacca44205b3d8ab4e557d05b72bf0a41d988e843456
+CASPIO_SECRET_KEY= c92ec092f92141e2a67be3ac65727675770b3411cb19b0ba4e
+CASPIO_QR_CLIENTID= 9c4d2268857e4eb5c63e6baddaad8d6adadfc406e9365aba39
+CASPIO_QR_SECRET_KEY= 7ae96ede6ae7431b91d9296e0a30299c12fb84bc7b9792f9dc
+QR_APIPATH = https://api.qr.io/v1/create
+QR_APIKEY = m8o1Jxiq462PKu0XrOen
+
