--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ PORT = 5000
 UPLOADCARE_PUB_KEY = 'cc2fed9d9bf34ec55dfc'
 UPLOADCARE_URL = 'https://upload.uploadcare.com/base/'
 UPLOADCARE_PATH = 'https://ucarecdn.com/'
+CASPIO_QR_PATH = 'https://caspers.4qrz.com/'
 CASPIO_MBIZCARD_TABLE_PATH = 'https://c7esh782.caspio.com/rest/v2/tables/MBizCard_Users/records'
 CASPIO_AUTHTOKEN_PATH = 'https://c7esh782.caspio.com/oauth/token'
 CASPIO_QR_GENERATOR_TABLE_PATH = 'https://c0dcs193.caspio.com/rest/v2/tables/QR_Generator_Active_1/records'
