added qr code for vcard and mbiz url

--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 PORT = 5000
 UPLOADCARE_PUB_KEY = 'cc2fed9d9bf34ec55dfc'
+UPLOADCARE_MBIZ_PUB_KEY = '88af9fbbe7ed5fbf6025'
 UPLOADCARE_URL = 'https://upload.uploadcare.com/base/'
 UPLOADCARE_PATH = 'https://ucarecdn.com/'
 CASPIO_QR_PATH = 'https://caspers.4qrz.com/'
 CASPIO_MBIZCARD_TABLE_PATH = 'https://c7esh782.caspio.com/rest/v2/tables/MBizCard_Users/records'
 CASPIO_AUTHTOKEN_PATH = 'https://c7esh782.caspio.com/oauth/token'
-CASPIO_QR_GENERATOR_TABLE_PATH = 'https://c0dcs193.caspio.com/rest/v2/tables/QR_Generator_Active/records'
+CASPIO_QR_GENERATOR_TABLE_PATH = 'https://c0dcs193.caspio.com/rest/v2/tables/QR_Generator_Active_1/records'
 CASPIO_QR_GENERATOR_AUTHTOKEN_PATH = 'https://c0dcs193.caspio.com/oauth/token'
 CASPIO_CLIENTID= 327493aacca44205b3d8ab4e557d05b72bf0a41d988e843456
 CASPIO_SECRET_KEY= c92ec092f92141e2a67be3ac65727675770b3411cb19b0ba4e
