--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "nodemon": "^2.0.20",
+    "request": "^2.88.2",
     "uuid": "^9.0.0",
     "vcards-js": "^2.10.0",
     "xml2js": "^0.4.23"
