added event qr code

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT = 5000
 UPLOADCARE_PUB_KEY = 'cc2fed9d9bf34ec55dfc'
+UPLOADCARE_TAPESTRY_PUB_KEY = '9e01c9c13fb89f397771'
 UPLOADCARE_MBIZ_PUB_KEY = '88af9fbbe7ed5fbf6025'
 UPLOADCARE_URL = 'https://upload.uploadcare.com/base/'
 UPLOADCARE_PATH = 'https://ucarecdn.com/'
