--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "express": "^4.18.1",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.20",
     "request": "^2.88.2",
+    "stripe": "^12.0.0",
     "uuid": "^9.0.0",
     "vcards-js": "^2.10.0",
     "xml2js": "^0.4.23"
