--- a/.env
+++ b/.env
@@ -26,3 +26,7 @@ CASPIO_WAVE_CLIENTID = 64c4aba16f094265c63e614b9fd50c86708404f0bae6c43476
 CASPIO_WAVE_SECRET_KEY = a629c1c6e85c437f86a66b4df1cd15676537b4902bd9940bf9
 WAVE_API_ENDPOINT = 'https://gql.waveapps.com/graphql/public'
 WAVE_AUTH_TOKEN = LOePKhAWLFSOxeH4lPbnSeabcqNG6Z
+
+CASPIO_TAPESTRY_CLIENTID = f1ba8f4646434175b3d8a538b7cb8792202b3437393f2d8365
+CASPIO_TAPESTRY_SECRETKEY = f22ade1016334c6a8bde8f6d8fb3fef676a154159a785d4bd8
+CASPIO_TAPESTRY_URL = 'https://c7esh782.caspio.com/rest/v2/tables/TTN_API_Keys/records?' 
