health heros stripe api

--- a/.env
+++ b/.env
@@ -30,3 +30,5 @@ WAVE_AUTH_TOKEN = LOePKhAWLFSOxeH4lPbnSeabcqNG6Z
 CASPIO_TAPESTRY_CLIENTID = f1ba8f4646434175b3d8a538b7cb8792202b3437393f2d8365
 CASPIO_TAPESTRY_SECRETKEY = f22ade1016334c6a8bde8f6d8fb3fef676a154159a785d4bd8
 CASPIO_TAPESTRY_URL = 'https://c7esh782.caspio.com/rest/v2/tables/TTN_API_Keys/records?' 
+CASPIO_HEALTH_HEROES_URL = 'https://c7esh782.caspio.com/rest/v2/tables/HH_User_Subscriptions/records'
+CASPIO_HEALTH_HEROES_KEY_URL = 'https://c7esh782.caspio.com/rest/v2/tables/HH_API_Keys/records?'
